# Leaflet-BookReader

./: LICENSE  README.md
apps/: index.html  package-lock.json  package.json  tailwind.config.cjs
apps/src/: App.tsx  index.css
apps/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/src-tauri/capabilities/: default.json
apps/src-tauri/resources/: README.txt
apps/src-tauri/src/: main.rs
apps/src-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/src-tauri/src-tauri/src/: main.rs
apps/src-tauri/src-tauri/src/commands/: mod.rs
apps/src-tauri/src-tauri/src/db/: mod.rs
apps/src-tauri/src-tauri/src/storage/: mod.rs
apps/src-tauri/src-tauri/src/sync/: drive.rs
apps/src-tauri/src/commands/: mod.rs
apps/src-tauri/src/db/: mod.rs
apps/src-tauri/src/metadata/: mod.rs  normalize.rs  open_library.rs  wikipedia.rs
apps/src-tauri/src/storage/: mod.rs
apps/src-tauri/src/sync/: drive.rs
apps/src/components/: AccountBadge.tsx  AccountPanel.tsx  BookCard.tsx  BookRow.tsx  LoginModal.tsx  Sidebar.tsx
apps/src/constants/: bookFormats.ts
apps/src/pages/: AnalyticsPage.tsx  CollectionsPage.tsx  HomePage.tsx  LibraryPage.tsx  ReaderView.tsx  SettingsPage.tsx  StreakPage.tsx
apps/src/platform/desktop/: file.ts
apps/src/services/: bookService.ts  converterService.ts
apps/src/store/: accountStore.ts  habitStore.ts  libraryStore.ts
